fix skills overflow on footer bug

--- a/src/components/sections/footer/footer.scss
+++ b/src/components/sections/footer/footer.scss
@@ -161,6 +161,6 @@ input:-webkit-autofill:active {
           transition: color 9999s ease-out, background-color 9999s ease-out;
 }
 
-.keyboard {
+.keyboard-footer {
   padding-bottom: 35vh;
 }
